# Bgg-seeder

./: .gitignore  Cargo.toml  README.md
migrations/: 20230703112424_create_boardgames_table.sql  20230709061327_add_columns_to_boardgames.sql
src/: main.rs
