[package]
name = "bgg-seeder"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
reqwest = { version = "0.11.18", features = ["blocking"] }
tokio = "1"
sqlx = { version = "0.6.3", features = ["mysql", "tokio"] }
